# easterobot

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  404.html  Dockerfile  MANIFEST.in  README.md  README.rst  conftest.py  docker-compose.yml  entrypoint.sh  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  references.html  requirements-dev.txt  requirements-tools.txt  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  references.doctree
.github/actions/setup-project/: action.yml
.github/workflows/: publish.yml  tests.yml
_modules/: index.html
_modules/easterobot/: bot.html  cli.html
developer_interface/: index.html
docs/: conf.py  developer_interface.md  references.rst
easterobot/: __init__.py  __main__.py  bot.py  cli.py  config.py  info.py  locker.py  logger.py  models.py  query.py  utils.py
easterobot/alembic/: env.py
easterobot/alembic/versions/: 2f0d4305e320_init_database.py  940c3b9c702d_add_lock_on_eggs.py
easterobot/casino/: __init__.py  roulette.py
easterobot/commands/: __init__.py  base.py  basket.py  disable.py  edit.py  enable.py  game.py  help.py  info.py  reset.py  roulette.py  search.py  top.py
easterobot/data/: config.yml  config.yml.exemple
easterobot/games/: __init__.py  connect.py  connect4.py  game.py  rock_paper_scissor.py  rock_paper_scissors.py  skyjo.py  tic_tac_toe.py
easterobot/hunts/: __init__.py  hunt.py  luck.py  rank.py
easterobot/resources/: alembic.ini  config.example.yml  credits.txt  logging.conf
search/: search_index.json
tests/: constants.py  test_cli.py  test_config.py  test_search.py
tools/: chatgpt.txt  cropping.py  gen_grid_emoji.py
